<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_ride_record"
            android:icon="@drawable/ic_list"

            android:title="@string/drawer_menu_ride_record" />
        <item
            android:id="@+id/drawer_menu_about_micro"
            android:icon="@drawable/ic_info"
            android:title="@string/drawer_menu_about_micro" />
        <item
            android:id="@+id/drawer_menu_setting"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/drawer_menu_setting" />
        <item
            android:id="@+id/drawer_menu_feedback"
            android:icon="@drawable/ic_star"
            android:title="@string/drawer_menu_feedback" />
        <item
            android:id="@+id/drawer_menu_logout"
            android:icon="@drawable/logout"
            android:title="@string/drawer_menu_logout" />
    </group>

    <item
        android:id="@+id/drawer_menu_more"
        android:icon="@drawable/ic_expand_more_black_24dp"
        android:title="@string/drawer_menu_more">
        <menu>
            <item
                android:id="@+id/drawer_menu_nav_send"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/drawer_menu_nav_send" />
        </menu>
    </item>


</menu>
