<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.AboutMicroTaxi">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_7sdp"
        app:cardElevation="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/ic_launcher_app_foreground" />

            <TextView
                android:id="@+id/about_micro_tv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/elmessiri_bold"
                android:gravity="center"
                android:text="@string/about_tv_about_micro_taxi"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/about_micro_tv_about_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/elmessiri_bold"
                android:gravity="center"
                android:text="@string/about_tv_about_sub_micro_taxi"

                android:textSize="18sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_7sdp"
        app:cardElevation="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:id="@+id/about_micro_tv_goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/elmessiri_bold"
                android:gravity="center"
                android:text="@string/about_micro_tv_goals"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/about_micro_tv_goals_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/elmessiri_bold"
                android:gravity="center"
                android:text="@string/about_micro_tv_goals_sub"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_7sdp"
        app:cardElevation="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView

                android:id="@+id/about_micro_tv_customer_attention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/elmessiri_bold"
                android:gravity="center"
                android:text="@string/about_micro_tv_customer_attention"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/about_micro_tv_customer_attention_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/elmessiri_bold"
                android:gravity="center"
                android:text="@string/about_micro_tv_customer_attention_sub"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_7sdp"
        app:cardElevation="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView

                android:id="@+id/about_micro_tv_our_mission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/elmessiri_bold"
                android:gravity="center"
                android:text="@string/about_micro_tv_our_mission"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/about_micro_tv_our_mission_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/elmessiri_bold"
                android:gravity="center"
                android:text="@string/about_micro_tv_our_mission_sub"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_7sdp"
        app:cardElevation="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView

                android:id="@+id/about_micro_tv_our_vision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/elmessiri_bold"
                android:gravity="center"
                android:text="@string/about_micro_tv_our_vision"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/about_micro_tv_our_vision_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/elmessiri_bold"
                android:gravity="center"
                android:text="@string/about_micro_tv_our_vision_sub"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>





</androidx.core.widget.NestedScrollView>