<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sign_in_driver"
    android:background="@color/colorAccent"
    tools:context=".ui.SignInDriver">


    <TextView
        android:id="@+id/sign_in_driver_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/elmessiri_bold"
        android:text="@string/sign_in_driver_tv_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_driver_tv_title"
        app:srcCompat="@drawable/ic_driver"
        android:contentDescription="TODO" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="32dp"
        app:boxBackgroundMode="filled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_driver_ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:fontFamily="@font/elmessiri_medium"
            android:hint="@string/sign_in_driver_ed_hint_email">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_driver_ed_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/elmessiri_medium"
            android:hint="@string/sign_in_driver_ed_password"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/sign_in_driver_btn_login"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:fontFamily="@font/elmessiri_bold"
        android:text="@string/sign_in_driver_btn_text_login"
        android:textColor="@color/colorAccent"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <TextView
        android:id="@+id/sign_in_driver_tv_with"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/elmessiri_medium"
        android:gravity="center"
        android:text="@string/sign_in_driver_tv_with"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_driver_btn_login" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_driver_tv_with">

        <ImageView
            android:id="@+id/sign_in_driver_img_facebook"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="@dimen/_5sdp"
            app:srcCompat="@drawable/ic_facebook"
            tools:layout_editor_absoluteX="141dp"
            tools:layout_editor_absoluteY="535dp" />

        <ImageView
            android:id="@+id/sign_in_driver_img_twitter"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="@dimen/_5sdp"
            app:srcCompat="@drawable/ic_twitter"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="534dp" />

        <ImageView
            android:id="@+id/sign_in_driver_img_whatsapp"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="@dimen/_5sdp"
            app:srcCompat="@drawable/ic_whatsapp"
            tools:layout_editor_absoluteX="254dp"
            tools:layout_editor_absoluteY="535dp" />
    </LinearLayout>

    <Button
        android:id="@+id/sign_in_driver_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/elmessiri_medium"
        android:text="@string/sign_in_driver_btn_text_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/transparent"
        app:cornerRadius="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>