<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ui.ActivitySelectType">

    <TextView
        android:id="@+id/activity_select_type_tv_text_select"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/elmessiri_regular"
        android:gravity="center"
        android:text="@string/activity_select_type_tv_text_select"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/activity_select_type_tv_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:fontFamily="@font/elmessiri_semibold"
        android:text="@string/activity_select_type_tv_passenger"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_select_type_iv_passenger" />

    <TextView
        android:id="@+id/activity_select_type_tv_passenger"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"

        android:layout_marginLeft="70dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/elmessiri_semibold"
        android:text="@string/activity_select_type_tv_driver"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_select_type_iv_driver" />

    <ImageView
        android:id="@+id/activity_select_type_iv_driver"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginBottom="200dp"
        android:src="@drawable/ic_driver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <ImageView
        android:id="@+id/activity_select_type_iv_passenger"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="200dp"
        android:src="@drawable/ic_passenger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>